# cloud-node-utils

./: .bashrc  Pulumi.dev.yaml  Pulumi.node.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml  setup.sh  setup_root.sh  setup_user.sh
config/: .bashrc
scripts/: create_user.sh  download_config_per_net.sh  run_node.sh  run_testnet_preview.sh  setup_root.sh  setup_run_testnet_preview.sh  setup_user.sh
